integrating liftscreen forms into app

--- a/lift_basic/src/main/webapp/index.html
+++ b/lift_basic/src/main/webapp/index.html
@@ -6,26 +6,17 @@
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Welcome to your project!</h2>
+      <h2>Input loans</h2>
       <p>
 
-  <span class="lift:myMod:wow">
-    This the first modification that <span id="name"> made to the program</span>
- made to the program
- </span>
-
-
   <div>
-    Using lifts SHtml.onSubmit, we have better control over form processing.
-  </div>
-
-  <div>
-    <form class="lift:OnSubmit?form=post">
-      Name: <input name="name"><br>
-      Age: <input name="age" value="0"><br>
-      <input type="submit" value="Submit">
+    using the liftscreen for a form:  
+    <form class="lift:ScreenExample?form=post">
     </form>
-  </div>
+</div>
+
+
+
 
 
 
