--- a/lift_basic/src/main/webapp/templates-hidden/default.html
+++ b/lift_basic/src/main/webapp/templates-hidden/default.html
@@ -62,18 +62,18 @@
       <div class="column span-6 colborder sidebar">
         <hr class="space" >
 
-    	<span class="lift:Menu.builder"></span>
+    <!--	<span class="lift:Menu.builder"> is this where the post goes?</span>-->
 
-        <div class="lift:Msgs?showAll=true"></div>
+        <div id="content">The main content will get bound here</div>
         <hr class="space" />
       </div>
 
       <div class="column span-17 last">
-        <div id="content">The main content will get bound here</div>
       </div>
 
       <hr />
       <div class="column span-23 last" style="text-align: center">
+        <div class="lift:Msgs?showAll=true"></div>
         <h4 class="alt">
           <a href="http://www.liftweb.net"><i>Lift</i></a> 
 	  is Copyright 2007-2012 WorldWide Conferencing, LLC.
