adding sbt stuff. Implementing wiring for view - template from seventhings is built, will modify

--- a/src/main/webapp/screen.html
+++ b/src/main/webapp/screen.html
@@ -1,13 +1,6 @@
-<div id="main" class="lift:surround?with=default&at=content">
-
-  <div>
-    using lifts liftscreen
-  </div>
-
-  <div class="lift:ScreenExample">
-    form goes here
-  </div>
-  
+<div>
+  <form class="lift:ScreenExample?form=post">
+  </form>
 </div>
 
 
