--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -55,21 +55,28 @@
     <div class="container">
       <div class="column span-12 last" style="text-align: right">
         <h1 class="alt">Loan Calculator<img alt="" id="ajax-loader" style="display:none; margin-bottom: 0px; margin-left: 5px" src="/images/ajax-loader.gif"></h1>
-      </div>
+
+
+  </div>
 
       <hr>
 
       <div class="column span-6 colborder sidebar">
         <hr class="space" >
 
-    <!--	<span class="lift:Menu.builder"> is this where the post goes?</span>-->
 
-        <div id="content">The main content will get bound here</div>
+    	<span class="lift:Menu.builder"> is this where the post goes?</span>
+
         <hr class="space" />
       </div>
 
       <div class="column span-17 last">
-      </div>
+
+
+    <div id="content">The main content will get bound here</div>
+
+
+  </div>
 
       <hr />
       <div class="column span-23 last" style="text-align: center">
