--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-    <title>Home</title>
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
+  <title>Home</title>
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
       <h2>Input loans</h2>
       <p>
 
-  <div>
-    using the liftscreen for a form:  
-    <form class="lift:ScreenExample?form=post">
-    </form>
-</div>
+        <span class="lift:embed?what=wiring">
+          this is kind of cool
+        </span>
 
 
-
-
-
-
-
+      <!--  <span class="lift:embed?what=screen">
+           replaced with embedded content
+        </span>-->
       </p>
     </div>
 
