modified menu and trying to remove lines

--- a/src/main/webapp/loan_calculator.html
+++ b/src/main/webapp/loan_calculator.html
@@ -1,62 +1,28 @@
+
 <!DOCTYPE html>
 <html>
   <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>Home</title>
+  <title>Loan Calculator</title>
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Input loans</h2>
+      <h2>Loan Calculator</h2>
       <p>
+
+
+  
+
+
 
         <span class="lift:embed?what=wiring">
           this is kind of cool
         </span>
-
-<!--  <form class="lift:ScreenExample?form=post">
-  </form>
--->
-
-
-
 
       </p>
     </div>
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
