--- a/src/main/webapp/wiring.html
+++ b/src/main/webapp/wiring.html
@@ -2,20 +2,40 @@
   <div id="loan_inputs" data-lift="LoanWiring.showLoans"> input goes here </div>
 
 
-
   <div>
     <button data-lift="LoanWiring.addLoan?div=loan_inputs"> Add </button>
   </div>
 
 
-<div>Subtotal: <span data-lift="LoanWiring.subtotal">subtotal</span></div>
 
-  <!--<div>Tax Rate: <input data-lift="LoanWiring.taxRate"></div>-->
 
-  <div>interest: <span data-lift="LoanWiring.interest">Taxable</span></div>
 
-  <!--<div>Tax: <span data-lift="LoanWiring.tax">Tax</span></div>-->
+
+
+
+
+
+
+
+
+
+<!--  <div>
+    <button data-lift="LoanWiring.removeLoan?div=loan_inputs"> Remove </button>
+  </div> -->
+
+
+
+
+  <!--<div>Subtotal: <span data-lift="LoanWiring.subtotal">subtotal</span></div>
+
+<div>Tax Rate: <input data-lift="LoanWiring.taxRate"></div>
+
+  <div>Interest: <span data-lift="LoanWiring.interest">interest</span></div>
+
+  <div>Tax: <span data-lift="LoanWiring.tax">Tax</span></div>
 
   <div>Total: <span data-lift="LoanWiring.total">Total</span></div>
+-->
+
 </div>
 
