playing with different lift features, trying to find which to use

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -8,23 +8,25 @@
   </head>
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Input loans</h2>
-      <p>
-
-
+      <h2>About</h2>
+<p>
  This is a really cool application designed by Nathaniel Saul.
-
- It is his first project using Lift and Scala.  It has been an interesting learning experience for him, having done very limited web development.   
-
+</p>
 
 
+<p>
+It is his first project using Lift and Scala.  
+It has been an interesting learning experience for him, having done very limited web development.  
+While the intention of the project was to practice scala, the scala part (actually building the computational aspect of the loan calculator) was really quite simple.  
+It was learning the view first paradigm that has (so far) been the most difficult part.  
+</p>
+
+<p>
+This page not only describes what the project is about, but also shows most of what he knows about HTML (hint: not much).
+</p>
 
 
 
-
-
-
-      </p>
     </div>
 
   </body>
