--- a/src/main/webapp/wiring.html
+++ b/src/main/webapp/wiring.html
@@ -9,9 +9,12 @@
 
 
 
+  <div>
+    <button data-lift="LoanWiring.calculate_values?div=calculated"> Calculate </button>
+  </div>
 
 
-
+  <div> </div>
 
 
 
