--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,15 +10,21 @@
       <h2>Input loans</h2>
       <p>
 
-        <span class="lift:embed?what=wiring">
-          this is kind of cool
-        </span>
+
+
+
+
+
+    <span class="lift:embed?what=wiring">
+      this is kind of cool
+    </span>
 
 <!--  <form class="lift:ScreenExample?form=post">
   </form>
 -->
 
 
+<div id="calc">Results:</div>
 
 
       </p>
