discarded a whole bunch of changes to test page.

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -26,6 +26,13 @@ This page not only describes what the project is about, but also shows most of w
 </p>
 
 
+<p>
+I learned today that it would greatly benefit me to be learning JavaScript and jQuery at the same time
+
+
+</p>
+
+
 
     </div>
 
