further play - trying to incorporate examples from 'exploring lift' -- got other button to work

--- a/src/main/webapp/loan_calculator.html
+++ b/src/main/webapp/loan_calculator.html
@@ -25,7 +25,8 @@ This is a scratch pad for working on different methods of the form!
   <input type="text" placeholder="Balance" name="balance"/>
   <input type="text" placeholder="Minimum" name="minpayment"/>
   <input type="text" placeholder="Interest Rate" name="interest"/>
-  <input type="submit" value="Add" />
+  <input type="submit" value="Add" />  
+      <!-- I can't figure out what gets called when I push this??-->
 </div>
 </form>
 
@@ -37,10 +38,17 @@ This is a scratch pad for working on different methods of the form!
 -->
 
 
+<div>
+  <input type="text" placeholder"Balance" id="bal">
+</div>
+
+
   <div>
     <button data-lift="LoanWiring.calculate_values?div=calculated"> Calculate </button>
   </div>
-  <div id="calc"></div>
+
+
+  <div id="calc"</div>
 
 
     </div>
