--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,67 +1,38 @@
 
-<!DOCTYPE html>
-<html>
-  <head>
-  <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>Home</title>
-  </head>
-  <body class="lift:content_id=main">
-    <div id="main" class="lift:surround?with=default;at=content">
-      <h2>Input loans</h2>
-      <p>
+<lift:surround with="default" at="content">
+  
+  
+  
+  <h2>Input loans</h2>
+    <p>
+      <div id="loan_inputs" data-lift="LoanWiring.showLoans"> input goes here </div>
+
+      <div>
+        <button data-lift="LoanWiring.addLoan?div=loan_inputs"> Add </button>
+      </div>
+
+      <div>
+        <button data-lift="LoanWiring.calculate_values?div=calculated"> Calculate </button>
+      </div>
+
+
+      <div id="calc">Results:</div>
+    </p>
+
+
+  <div class="column span-24">
+
+    <lift:LoanWiring.addLoan form="POST">
+      <div id="entryform">
+        <div class="column span-24"><h3>Entry Form</h3>
+          <e:account /> <e:dateOf /> <e:desc /> <e:value />
+          <e:tags?><button>Add </button>
+        </div>
+      </div>
+    </lift:LoanWiring.addLoan>
+  </div>
 
 
 
-
-
-
-    <span class="lift:embed?what=wiring">
-      this is kind of cool
-    </span>
-
-
-
-
-<div id="calc">Results:</div>
-
-
-      </p>
-    </div>
-
-  </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</lift:surround>
 
