--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,38 +1,12 @@
-
 <lift:surround with="default" at="content">
-  
-  
-  
-  <h2>Input loans</h2>
-    <p>
-      <div id="loan_inputs" data-lift="LoanWiring.showLoans"> input goes here </div>
 
-      <div>
-        <button data-lift="LoanWiring.addLoan?div=loan_inputs"> Add </button>
-      </div>
+Welcome to the loan calculator <br> 
 
-      <div>
-        <button data-lift="LoanWiring.calculate_values?div=calculated"> Calculate </button>
-      </div>
+<b> It is really cool! </b>
 
+<i> DUH we all know that already</i>
 
-      <div id="calc">Results:</div>
-    </p>
-
-
-  <div class="column span-24">
-
-    <lift:LoanWiring.addLoan form="POST">
-      <div id="entryform">
-        <div class="column span-24"><h3>Entry Form</h3>
-          <e:account /> <e:dateOf /> <e:desc /> <e:value />
-          <e:tags?><button>Add </button>
-        </div>
-      </div>
-    </lift:LoanWiring.addLoan>
-  </div>
 
 
 
 </lift:surround>
-
