Incorporate Loan model and Loans operations.  Buffed out About

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -9,30 +9,36 @@
   <body class="lift:content_id=main">
     <div id="main" class="lift:surround?with=default;at=content">
       <h2>About</h2>
-<p>
- This is a really cool application designed by Nathaniel Saul.
-</p>
 
 
-<p>
-It is his first project using Lift and Scala.  
-It has been an interesting learning experience for him, having done very limited web development.  
-While the intention of the project was to practice scala, the scala part (actually building the computational aspect of the loan calculator) was really quite simple.  
-It was learning the view first paradigm that has (so far) been the most difficult part.  
-</p>
 
-<p>
-This page not only describes what the project is about, but also shows most of what he knows about HTML (hint: not much).
-</p>
+<i>This is my very first project using Lift and Scala. 
+It was inspired by my large student loans.
+</i>
+<br>
+<br>
 
-
-<p>
-I learned today that it would greatly benefit me to be learning JavaScript and jQuery at the same time
+To use this loan calculator, input your loans into the fields
+and select a strategy you want to use to pay them off.
+<br>
+<br>
 
 
-</p>
+When you press <b>Calculate</b>, the underlying optimization algorithms will 
+calculate the best monthly payments you can make to your loans.
+<br><br>
 
+The strategies you can choose are:
+<br>
+<ul>
+<li>Snowball</li>
+<li>Avalanche</li>
+<li>Lazy</li>
+</ul>
 
+Sorry, I didn't make up these names.
+
+<br>
 
     </div>
 
