update TODO and added new ideas to long term goal

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -36,7 +36,10 @@ The strategies you can choose are:
 <li>Lazy</li>
 </ul>
 
-Sorry, I didn't make up these names.
+Unfortunately, I didn't make up these names.
+
+The app also shows you great statistics about your loans. 
+There will be some nice visualizations that update dynamically as you add loans.
 
 <br>
 
